Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,22 +1,19 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
+BOT_TOKEN = "6218758387:AAFy8TvZtxT0-x_tu80UcwAjYCcXsJu5mKU"
 GDRIVE_FOLDER_ID = ""
-OWNER_ID = 
+OWNER_ID = "6246655714"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 20
 AUTO_DELETE_MESSAGE_DURATION = 60       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1  #minimum recommended 120
 IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+TELEGRAM_API = "24718622"
+TELEGRAM_HASH = "482e7d8e47c19842a03ed794ef336d65"
 
 # OPTIONAL CONFIG
-DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
-SUDO_USERS = ""
+DATABASE_URL = "mongodb+srv://dhanush60101:<Dhanush@123>@cluster0.1cyixfc.mongodb.net/?retryWrites=true&w=majority"
+AUTHORIZED_CHATS = "-1001587651940"
+SUDO_USERS = "2081332914 1420903394"
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = ""
 INDEX_URL = ""
@@ -29,18 +26,18 @@ EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = ""
 
 #TURN ON/OFF FUCTIONS
-LEECH_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MIRROR_ENABLED = ""             #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WATCH_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-CLONE_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-ANILIST_ENABLED = ""            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WAYBACK_ENABLED = ""            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MEDIAINFO_ENABLED = ""          #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-SET_BOT_COMMANDS = "" 
+LEECH_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MIRROR_ENABLED = "True"             #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WATCH_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+CLONE_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+ANILIST_ENABLED = "True"            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WAYBACK_ENABLED = "True"            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MEDIAINFO_ENABLED = "True"          #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+SET_BOT_COMMANDS = "True" 
 
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/dhanush00005/anonymous1leech"
+UPSTREAM_BRANCH = "update"
 
 #PM SUPPORT
 BOT_PM = ""
@@ -75,7 +72,7 @@ CHANNEL_USERNAME = ""
 FSUB_CHANNEL_ID =
 
 # qBittorrent
-BASE_URL_OF_BOT = ""
+BASE_URL_OF_BOT = "https://anony20.herokuapp.com"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 QB_SEED = ""
@@ -155,7 +152,7 @@ PIXABAY_SEARCH = ""     # Put Keyword to Download Images from Pixabay.com Limit 
 
 
 #FONT STYLE
-NAME_FONT = ""        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
+NAME_FONT = "b"        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
 CAPTION_FONT = ""     # Default Caption of Leeched files, Available Options : b, code, i, u, strike, spoiler
 
 
