--- a/config.env
+++ b/config.env
@@ -1,12 +1,12 @@
 # REQUIRED CONFIG
 BOT_TOKEN = "6218758387:AAFy8TvZtxT0-x_tu80UcwAjYCcXsJu5mKU"
-GDRIVE_FOLDER_ID = ""
+GDRIVE_FOLDER_ID = "1XJoI7W_xk0F_nzTZEOngvle2K-PJvhON"
 OWNER_ID = "6246655714"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 20
 AUTO_DELETE_MESSAGE_DURATION = 60       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1  #minimum recommended 120
-IS_TEAM_DRIVE = ""
+IS_TEAM_DRIVE = "True"
 TELEGRAM_API = "24718622"
 TELEGRAM_HASH = "482e7d8e47c19842a03ed794ef336d65"
 
@@ -15,8 +15,8 @@ DATABASE_URL = ""
 AUTHORIZED_CHATS = "-1001587651940 -1001666476765"
 SUDO_USERS = "2081332914 1420903394"
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://tmp.tmpmirror.workers.dev/0:/"
 STATUS_LIMIT = "2" #recommended value 2
 STOP_DUPLICATE = ""
 CMD_INDEX = ""
@@ -44,9 +44,9 @@ BOT_PM = ""
 FORCE_BOT_PM = ""   #For this the BOT_PM must be True 
 
 # Leech
-LEECH_LOG = 
-LEECH_LOG_URL = ""
-LEECH_LOG_INDEXING = ""  #Default is False make it True if you want leech file indexing in leech log channel
+LEECH_LOG = "-1001981290072"
+LEECH_LOG_URL = "https://t.me/+zMcyE4imbatjZDU1"
+LEECH_LOG_INDEXING = "True"  #Default is False make it True if you want leech file indexing in leech log channel
 PAID_SERVICE = ""     # Default is False
 
 #Mirror
